css/photographer.css
* {
    margin: 0%;
    padding: 0%;
}

body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100vh;
}

a {
    color: inherit;
    text-decoration: inherit;
}

ul {
    list-style: none;
}

input:focus,
textarea:focus {
  outline: none;
}

select {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    outline: 0;
    border: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
    font: inherit;
}

select:focus {
  outline: none;
}

select::-ms-expand {
  display: none;
}
  
.primary-select {
    background-color: #901c1c;
    position: relative;
    color: white;
    border-radius: 5px;
    width: 140px;
    height: 60px;
    z-index: 1;
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}
  
.primary-select .indicator {
    font-size: 18px;
    position: absolute;
    top: calc(50% - 8px);
    right: 10px;
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}
  
.primary-select button {
    background-color: #901c1c;
    border: none;
    cursor: pointer;
    width: calc(100% - 0px);
    height: 0;
    opacity: 0;
    text-align: left;
    font-size: 18px;
    font-weight: 700;
    color: #fff;
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 5px 15px;
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}
  
.primary-select button:after {
    content: ' ';
    width: 80%;
    height: 1px;
    background-color: #fff;
    position: absolute;
    left: 10%;
    top: 0;
}
  
.primary-select button:first-of-type {
    opacity: 1;
    border-radius: 5px 5px 5px 5px;
    height: calc(60px - 0px);
}
  
.primary-select button:first-of-type:after {
    display: none;
}
  
.primary-select button:last-of-type {
    border-radius: 0 0 5px 5px;
}
  
.primary-select:focus .indicator,
.primary-select:hover .indicator,
.primary-select button:focus ~ .indicator {
    -webkit-transform: rotateX(180deg);
    transform: rotateX(180deg);
}
  
.primary-select:focus button,
.primary-select:hover button,
.primary-select button:focus ~ button,
.primary-select button:focus ~ button:nth-of-type(2),
.primary-select button:focus {
    opacity: 1;
    height: calc(60px - 10px);
}
  
.primary-select:focus button:focus, .primary-select:focus button:hover,
.primary-select:hover button:focus,
.primary-select:hover button:hover,
.primary-select button:focus ~ button:focus,
.primary-select button:focus ~ button:hover,
.primary-select button:focus ~ button:nth-of-type(2):focus,
.primary-select button:focus ~ button:nth-of-type(2):hover,
.primary-select button:focus:focus,
.primary-select button:focus:hover {
    background-color: #db8876;
    color: #000;
}
  
.primary-select:focus button:first-of-type,
.primary-select:hover button:first-of-type,
.primary-select button:focus ~ button:first-of-type,
.primary-select button:focus ~ button:nth-of-type(2):first-of-type,
.primary-select button:focus:first-of-type {
    border-radius: 5px 5px 0 0;
    height: calc(60px - 0px);
}

.media_card {
    height: 350px;
    width: 350px;
    margin: 30px 0;
}
  
.media_card video,
.media_card img {
    cursor: pointer;
    -o-object-fit: cover;
    object-fit: cover;
    -o-object-position: 0 30%;
    object-position: 0 30%;
    width: 100%;
    height: 300px;
    border-radius: 5px;
}
  
.media_card figcaption {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    height: 50px;
    width: 100%;
    color: #901c1c;
}
  
.media_card figcaption span {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
}
  
.media_card figcaption span i {
    cursor: pointer;
    position: relative;
    font-size: 20px;
    margin: 6px;
    font-weight: 100;
}
  
.media_card figcaption span i::after {
    content: '\f004';
    position: absolute;
    left: 0;
    font-weight: 800;
    -webkit-transform: scale(0);
    transform: scale(0);
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}
  
.media_card figcaption span i.liked::after, .media_card figcaption span i:hover::after {
    -webkit-transform: scale(1);
    transform: scale(1);
}
  
.media_card figcaption p,
.media_card figcaption h2 {
    font-size: 24px;
}
  
.media_card.video {
    position: relative;
    cursor: pointer;
}
  
.media_card.video::after {
    content: ' ';
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(calc(15px - 50%), calc(-50% - 15px)) scale(1.5, 0.8);
    transform: translate(calc(15px - 50%), calc(-50% - 15px)) scale(1.5, 0.8);
    width: 0px;
    height: 0px;
    border-style: solid;
    border-width: 30px;
    border-color: transparent transparent transparent #fff8;
}

*:focus {
    outline: 2px solid #000;
}

.lightbox {
    display: none;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: #fffe;
    z-index: 5;
}

.lightbox.active {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.lightbox figure {
    position: relative;
    margin: 50px;
    margin-top: 30px;
    max-width: calc(100% - 100px);
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;
    height: calc(100% - 70px);
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

.lightbox figure .media {
    max-width: 100%;
    max-height: 100%;
    margin: 0 auto;
}

.lightbox figure .media img,
.lightbox figure .media video {
    max-width: 100%;
    max-height: 100%;
    -o-object-fit: contain;
    object-fit: contain;
    border-radius: 5px;
}

.lightbox figure p {
    width: 100%;
    color: #901c1c;
    font-weight: 600;
    font-size: 24px;
}

.lb-ctrl {
    display: block;
    position: absolute;
    z-index: 10;
    top: 0;
    left: 0;
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    cursor: pointer;
    font-size: 36px;
    color: #901c1c;
    background-color: rgba(255, 255, 255, 0);
    border: none;
}

.lb-ctrl i {
    z-index: -1;
}

.prev {
    left: 20px;
    top: 50%;
}

.next {
    left: calc(100% - 40px);
    top: 50%;
}

.close {
    top: 2%;
    left: 95%;
}

.close .xmark:before {
    content: '\f00d';
}

#main {
    padding: 0 100px;
}

#contact_modal {
    display: none;
    position: fixed;
    left: 0;
    top: 0;
    z-index: 1;
    width: 100%;
    height: 100%;
    overflow: auto;
}

header .logo {
    height: 50px;
    margin-left: 100px;
    margin-top: 35px;
}

.photograph-header {
    background-color: #fafafa;
    height: 300px;
    padding: 20px;
    display: -ms-grid;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
  }
  
  .photograph-header .photographer-info {
    margin: auto;
  }
  
  .photograph-header .name {
    font-size: 64px;
    line-height: 69px;
    color: #d3573c;
  }
  
  .photograph-header .location {
    font-size: 24px;
    line-height: 31px;
    color: #901c1c;
  }
  
  .photograph-header .tagline {
    font-size: 18px;
    line-height: 23px;
    color: #525252;
  }
  
  .photograph-header .contact_button {
    margin: auto auto;
  }
  
  .photograph-header img {
    width: 250px;
    height: 250px;
    border-radius: 50%;
    -o-object-fit: cover;
    object-fit: cover;
    margin: auto auto;
  }
  
  .photograph-header .photograph-like {
    z-index: 5;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    position: fixed;
    bottom: -5px;
    right: 1em;
    background-color: #db8876;
    padding: 10px 20px;
    border-radius: 5px;
    font-weight: 600;
  }
  
  .photograph-header .photograph-like i {
    margin-right: 20px;
    margin-left: 5px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

.contact_button {
    font-size: 20px;
    font-weight: bold;
    color: white;
    padding: 11px;
    width: 170px;
    height: 70px;
    border: none;
    background-color: #901C1C;
    border-radius: 5px;
    cursor: pointer;
}

.contact_button:hover {
    background-color: #db8876;
    color: #000;
}

.filters {
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    margin: 20px 0;
    font-size: 18px;
    font-weight: 700;
}
  
.filters label {
    margin-right: 20px;
}

.modal {
    border-radius: 5px;
    background-color: #DB8876;
    width: 50%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: 35px;
    margin: auto;
}

.modal header {
    justify-content: space-between;
    width: 100%;
}

.modal header img {
    cursor: pointer;
}

.modal header h2 {
    font-size: 64px;
    font-weight: normal;
    text-align: center;
}

form {
    display: flex;
    width: 100%;
    flex-direction: column;
    align-items: flex-start;
}

form label {
    color: #312E2E;
    font-size: 36px;
}

form div {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-bottom: 20px;
}

form input {
    width: 100%;
    height: 40px;
    border: none;
    border-radius: 5px;
}

#media-container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
}

